tex document style updated and more comma erors remvoed

--- a/latex/Thesis/related.tex
+++ b/latex/Thesis/related.tex
@@ -371,14 +371,15 @@ Our implementation of the attack and for the hash function and other related wor
 
 In the long term, we hope the community will find this work useful and this will contribute to solving further rounds of \KECCAK{} practically for both collision and preimage challenges.
 
-\chapter{Preimage Attacks on 3,4 rounds of \KECCAK{}}
+\chapter{Some Insights for Preimage Attacks on $3$ and $4$ rounds of \KECCAK{} and Future Work}
 
-In this chapter, we will present some theoretical attacks for $3,\;4$ rounds of \KECCAK{}, mainly on \KECCAK{}-$256$ and \KECCAK{}-$224$. These attacks use the techniques of linearization suggested by Guo \etal in ~\cite{guo2016linear}.
+In this chapter, we will share some insights for theoretical attacks on $3$ and $4$ rounds of \KECCAK{}, more especially for \KECCAK-$256$ and \KECCAK-$224$. These attacks use the techniques of linearization suggested by Guo \etal in~\cite{guo2016linear}. We further stress here that they need to be verified and checked thoroughly for correctness. We plan to take it also one of our future work.
 
 \section{Preimage Attack on 3 rounds of \KECCAK-256}
-In this section, we discuss a preimage attack on $3$ rounds of \KECCAK-$256$. This attack draws motivation from the preimage attack on $2$ rounds of \Keccak-$256$ using the idea of linear structure as described in section~\ref{section2RKeccak256}.
+\label{3rkeccak256}
+The attack draws motivation from the preimage attack on $2$ rounds of \Keccak-$256$ using the idea of linear structure as described in Section~\ref{section2RKeccak256}.
 
-\Keccak-$256$ structure has capacity $c = 256 \cdot 2 = 512 = 8$ lanes and rate$ =  25 - 8 = 17$ lanes. We increase the number of variable lanes for this attack as compared to structure used for attacking $2$ rounds of \Keccak-$256$ as shown in Figure~\ref{fig:2rkeccak256}, by keeping the lanes $(0,0), (0,1), (0,2), (0,3)$ and $(2,0), (2,1), (2,2)$ as variables in columns $0$ and $2$ respectively as shown in Figure~\ref{fig:3rkeccak256}. The yellow colored lanes represents the variables in the state, the white lanes represent any random constant and the gray lanes are the $0$ lanes. The orange colored lanes in the state $B$ represent non-linear terms in the Figure~\ref{fig:3rkeccak256}.
+\Keccak-$256$ structure has capacity $c = 256 \cdot 2 = 512 = 8$ lanes and rate $=25-8=17$ lanes. We increase the number of variable lanes for this attack as compared to structure used for attacking $2$ rounds of \Keccak-$256$ as shown in Figure~\ref{fig:2rkeccak256}, by keeping the lanes $(0,0),\;(0,1),\;(0,2),\; (0,3)$ and $(2,0),\; (2,1),\; (2,2)$ as variables in columns $0$ and $2$ respectively as shown in Figure~\ref{fig:3rkeccak256}. The yellow colored lanes represents the variables in the state, the white lanes represent any random constant and the gray lanes are the $0$ lanes. The orange colored lanes in the state $B$ represent non-linear terms in the Figure~\ref{fig:3rkeccak256}.
 
 \begin{figure}[H]
         \centering
@@ -389,7 +390,7 @@ In this section, we discuss a preimage attack on $3$ rounds of \KECCAK-$256$. Th
         \label{fig:3rkeccak256}
 \end{figure}
 
-To prevent the spread of $\theta$ in the first round we need to add constraints :
+\noindent To prevent the spread of $\theta$ in the first round we need to add constraints:
 \begin{enumerate}
 \item \[
         A[0,0] = A[0,1] \oplus A[0,2] \oplus A[0,3] \oplus \alpha_0
@@ -398,36 +399,36 @@ To prevent the spread of $\theta$ in the first round we need to add constraints 
         A[2,0] = A[2,1] \oplus A[2,2] \oplus \alpha_2
     \]
 \end{enumerate}
-where, $\alpha_0, \alpha_2$ are random constants.
-
-Due to the above constraints, the state remains linear and the variables do not spread after application of $\theta$ step mapping as shown in the second state of the Figure~\ref{fig:3rkeccak256}. Further applying $\pi \circ \rho$ on the second state, permutes the positions of the lanes as well as rotations within the lane. Following this, $\iota \circ \chi$ step is applied to the third state to obtain the fourth state, which is a linear state. As explained in observation~\ref{ob5} since $\chi$ is a row-dependent operation and each row in the third state contains at most $2$ variables which are not adjacent therefore the resultant row after applying $\chi$ doesn't contain any quadratic variables.
-
+where $\alpha_0,\; \alpha_2$ are random constants.
+Due to the above constraints, the state remains linear and the variables do not spread after application of $\theta$ step mapping as shown in the second state of the Figure~\ref{fig:3rkeccak256}. 
+Further applying $\pi \circ \rho$ on the second state, permutes the positions of the lanes as well as rotations within the lane. 
+Following this, $\iota \circ \chi$ step is applied to the third state to obtain the fourth state, which is a linear state. 
+As explained in observation~\ref{ob5} since $\chi$ is a row-dependent operation and each row in the third state contains at most $2$ variables which are not adjacent therefore the resultant row after applying $\chi$ does not contain any quadratic variables.
 Hence after applying $\iota \circ \chi \circ \pi \circ \rho \circ \theta $ i.e. one round on the initial state, the output state remains linear.
 
-Moving on to the second round, the state is linear even after application of $\pi \circ \rho \circ \theta$, since these step mappings are linear and they don't introduce any non-linear terms. The input state (i.e. state $A$ as shown in Figure~\ref{fig:3rkeccak256}) to $\chi$ step of the second round is linear. Each row of state $A$ contains adjacent linear variables, therefore, we obtain non-linear terms in state $B$ after applying $\chi$ step. This is due to the fact that $\chi$ is a non-linear operation.
+Moving on to the second round, the state remains linear even after application of $\pi \circ \rho \circ \theta$, since these step mappings are linear and they do not introduce any non-linear terms. The input state (i.e. state $A$ as shown in Figure~\ref{fig:3rkeccak256}) to $\chi$ step of the second round is linear. Each row of state $A$ contains adjacent linear variables, therefore, we obtain non-linear terms in state $B$ after applying $\chi$ step. This is due to the fact that $\chi$ is a non-linear operation.
 
 % On the other hand, for \KECCAK-$256$ we have $d = 256 = 64*4$ i.e. hash value of only $4$ lanes. To make it easier to invert the $\chi$ step we can assume any random value as the value of the 5th lane in the hash state. but this will add more conditions to satisfy those assumed 64 bits for the 5-th lane.
 % We can directly apply $\iota^{-1}$ on the given hash and then we obtain $4$ hash lanes. Further, we can apply observation~\ref{ob3} to obtain $4$ linear equations on the bits input to $\chi$ for that row. By this, we obtain linear relations for the input state to the $\chi$ step.
 
-Then we can apply the same technique as mentioned in section~\ref{3rkeccak512attack} for this structure also. If we observe then, each bit of the inverted hash state is a sum of $11$ bits (due to $\theta$ step) of the output of the second round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just adds a constant to the first lane, they do not increase the nonlinear terms, and thus we can ignore these step mappings in the last one and a half rounds. For $3$ rounds of \Keccak-$256$ the hash state comprises of 4 lanes. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we know only $4$ out of $5$ bits in row-$0$ of hash state. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i,b_i$ denotes the input and output bit of $\chi$ respectively. 
+Then we can apply the same technique as mentioned in Section~\ref{3rkeccak512attack} for this structure also. If we observe then, each bit of the inverted hash state is a sum of $11$ bits (due to $\theta$ step) of the output of the second round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just adds a constant to the first lane, they do not increase the nonlinear terms, and thus we can ignore these step mappings in the last one and a half rounds. For $3$ rounds of \Keccak-$256$ the hash state comprises of 4 lanes. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we know only $4$ out of $5$ bits in row-$0$ of hash state. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i,\;b_i$ denotes the input and output bit of $\chi$ respectively. 
 
 Now, we aim to linearize $C[x][y][z]$ by guessing a few terms and then matching it with the bit obtained after applying $\chi^{-1}$ as explained above.
+The state $C$ in Figure~\ref{fig:3rkeccak256}, can be expressed in terms of state $B$:
+\begin{equation}
+  C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+\end{equation}
+Opening all the expressions and separate two terms $B[x][y][z]$ and $B[x-1][y][z]$ and keeping rest $9$ terms as it is, we get 
+\begin{equation}
+B[x][y][z] \oplus B[x-1][y][z] = (a \oplus c + b) \oplus d
+\end{equation} 
+where,
+\begin{equation}
+    a = A[x][y][z],\; b = A[x + 1][y][z],\; c = A[x + 2][y][z],\; d = A[x - 1][y][z].
+\end{equation}
+Guessing $b$ and other $9$ terms would make $C[x][y][z]$ linear. Hence, we linearize $C[x][y][z]$ by guessing these $10$ bits. We obtain $11 = 1 + 10$ linear equations and match $1$ bit of the hash value corresponding to $C[x][y][z]$. So, if we have $t$ variables in our state, then we can match $t/11$ bits of the hash.
 
-The state $C$ in Figure~\ref{fig:3rkeccak256}, can be expressed in terms of state $B$ :
-\[
-    C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
-\]
-
-Open all the expressions and separate two terms $B[x][y][z]$ and $B[x-1][y][z]$ and rest 9 terms remain as it is.
-So, \[ B[x][y][z] \oplus B[x-1][y][z] = (a \oplus c + b) \oplus d
-    \]
-Where,
-\[
-    a = A[x][y][z], b = A[x + 1][y][z], c = A[x + 2][y][z], d = A[x - 1][y][z]
-\]
-Guessing $b$ and other $9$ terms would make $C[x][y][z]$ linear. Hence, We linearize $C[x][y][z]$ by guessing these $10$ bits. We obtain $11 = 1 + 10$ linear equations and match $1$ bit of the hash value corresponding to $C[x][y][z]$. So, if we have $t$ variables in our state, then we can match $t/11$ bits of the hash.
-
-For \Keccak-$256$, we started with $7$ lanes variable states in the initial state. After applying conditions to keep $\theta$ as constant we are left with $7 - 2 = 5$ lane variables. Hence $t = 5 \cdot 64 = 320$ variables.
+For \Keccak-$256$, we started with $7$ lanes variable states in the initial state. After applying conditions to keep $\theta$ as constant we are left with $7 - 2 = 5$ lane variables. Hence, $t = 5 \cdot 64 = 320$ variables.
 Therefore, the number of matched bits of the hash are $t/11 = 320/11 = 29$, with this we have a complexity gain over brute-force of $2^{29}$.
 
 Attack complexity $ = 2^{256 - 29} = 2^{227}$.
@@ -457,11 +458,11 @@ In this section, we discuss a preimage attack for $3$ rounds of \KECCAK{}-$224$ 
 	\label{fig:3rkeccak224}
 \end{figure}
 
-Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ doesn't spread. Moreover, the parity of column-$1$ and column-$3$ is $1$ which causes the increase in the number of lanes containing all bits as $1$ after $\theta$ as shown in the second state of Figure~\ref{fig:3rkeccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in the third state. Further, on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms in this state this is primarily due to the values of the rows input to $\chi$. With this, the first round is complete and the output state i.e. fourth state is still linear.
+Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ does not spread. Moreover, the parity of column-$1$ and column-$3$ is $1$ which causes the increase in the number of lanes containing all bits as $1$ after $\theta$ as shown in the second state of Figure~\ref{fig:3rkeccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in the third state. Further, on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms in this state this is primarily due to the values of the rows input to $\chi$. With this, the first round is complete and the output state i.e. fourth state is still linear.
 
 We now proceed with the second round, since there are $4$ columns in the fourth state with linear terms in Figure~\ref{fig:3rkeccak224}. These linear variables will spread after the $\theta$ step of second round, to prevent this we constraint the parity of these $4$ columns to be random constants. After applying the $\theta$ step we obtain the fifth state where the yellow lanes represent the linear variables and gray lanes represent constants. On the application of $\pi \circ \rho$ on the fifth state, the position of all lanes is permuted. Now after applying $\iota \circ \chi$ on the sixth state we observe that all the lanes in the seventh state contain linear terms, this is primarily due to atmost 2 linear terms in some rows of the state input to $\chi$ as explained in observation~\ref{ob5}. Due to this the complete row after applying $\chi$ contains linear terms. With this, the second round is complete and the output state i.e. seventh state where all lanes are linear as shown in~\ref{fig:3rkeccak224}.
 
-Further, we start with the third round. After applying $\pi \circ \rho \circ \theta$ steps on the seventh state we obtain state $A$ which is linear as all these steps are linear mappings. For \Keccak{}-$224$, the hash state comprises of $3$ lanes and $32$ bits in the 4th lane as shown in green lanes in~\ref{fig:3rkeccak224}. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we don't have value of complete row. For this attack we can use observation~\ref{ob3} for the first $32$ slices of the hash state and obtain $4$ linear equations for each slice on the state $A$ i.e. input state to the $\chi$ step of third round. In the initial state, we have $8$ yellow lanes and after applying conditions for the first and second rounds of $\theta$ we are left with $8 - 2 - 4 = 2$ variable lanes. Therefore, the size of the linear structure is $2$ lanes = $128$ bits. All the bits in state $A$ are expressed in the form of these $128$ variables, we setup $128$ linear equations on $128$ variables from a $224$-bit hash value. We expect a complexity gain over bruteforce of $2^{128}$ and then can expect a correct preimage in $2^{224 - 128} = 2^{96}$ tries. The complexity of this attack is $O(2^{96})$.
+Further, we start with the third round. After applying $\pi \circ \rho \circ \theta$ steps on the seventh state we obtain state $A$ which is linear as all these steps are linear mappings. For \Keccak{}-$224$, the hash state comprises of $3$ lanes and $32$ bits in the 4th lane as shown in green lanes in~\ref{fig:3rkeccak224}. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we do not have value of complete row. For this attack we can use observation~\ref{ob3} for the first $32$ slices of the hash state and obtain $4$ linear equations for each slice on the state $A$ i.e. input state to the $\chi$ step of third round. In the initial state, we have $8$ yellow lanes and after applying conditions for the first and second rounds of $\theta$ we are left with $8 - 2 - 4 = 2$ variable lanes. Therefore, the size of the linear structure is $2$ lanes = $128$ bits. All the bits in state $A$ are expressed in the form of these $128$ variables, we setup $128$ linear equations on $128$ variables from a $224$-bit hash value. We expect a complexity gain over bruteforce of $2^{128}$ and then can expect a correct preimage in $2^{224 - 128} = 2^{96}$ tries. The complexity of this attack is $O(2^{96})$.
 
 \section{Preimage Attack on 4 rounds of \KECCAK-224}
     
@@ -488,31 +489,19 @@ We start with the initial state as shown in Figure~\ref{fig:keccak224} where the
     \]
 \end{enumerate}
 
-Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ doesn't spread. Moreover, the parity of column-$1$ and column-$3$ is $1$ which causes the increase in the number of lanes containing all bits as $1$ after $\theta$ as shown in the second state of Figure~\ref{fig:keccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in the third state. Further on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms. This is due to the values of the rows input to $\chi$ of first round. With this, the first round is complete and the output state i.e. fourth state is still linear.
+Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ does not spread. Moreover, the parity of column-$1$ and column-$3$ is $1$ which causes the increase in the number of lanes containing all bits as $1$ after $\theta$ as shown in the second state of Figure~\ref{fig:keccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in the third state. Further on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms. This is due to the values of the rows input to $\chi$ of first round. With this, the first round is complete and the output state i.e. fourth state is still linear.
 
 We now proceed with the second round, since there are $4$ columns in the fourth state with linear terms of Figure~\ref{fig:keccak224}. These linear variables will spread after the $\theta$ step, to prevent this we constraint the parity of these $4$ columns to be random constants. After applying the $\theta$ step we obtain the fifth state where the yellow lanes represent the linear variables and gray lanes represent constants. On the application of $\pi \circ \rho$ on the fifth state, the position of all lanes is permuted. Now after applying $\iota \circ \chi$ on the sixth state we observe that almost all the lanes state in the seventh state contain linear terms, this is primarily due to 2 linear terms in few rows in the state input to $\chi$ as explained in observation~\ref{ob5}. Due to this the complete row after applying $\chi$ contains linear terms. With this, the second round is complete and the output state i.e. seventh state where all lanes are linear as shown in~\ref{fig:keccak224}.
 
 Further, we start with the third round. After applying $\theta$ step on the seventh state the state remains linear as $\theta$ is a linear operation. After applying $\pi \circ \rho$ we obtain state $A$ which is linear as $\pi$ and $\rho$ steps are linear step mappings. In state $A$ each row contains linear variables, and since $\chi$ is a non-linear operation so if two adjacent bits are linear in a row then the output state will contain non-linear terms after applying $\chi$. So on applying step $\chi$ to state $A$, we obtain state $B$ where orange lanes represent non-linear as shown in ~\ref{fig:keccak224}.
 
-If we carefully observe then the input to step $\chi$ of the third round is linear i.e. state $A$ and also that each bit of the input state of the $\chi$ step of the fourth round is a sum of $11$ bits (due to $\theta$ step) of the output state of the third round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just adds a constant to the first lane so they don't increase the nonlinear terms. Therefore, we ignore these step mappings in the last one and a half rounds.
+If we carefully observe then the input to step $\chi$ of the third round is linear i.e. state $A$ and also that each bit of the input state of the $\chi$ step of the fourth round is a sum of $11$ bits (due to $\theta$ step) of the output state of the third round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just adds a constant to the first lane so they do not increase the nonlinear terms. Therefore, we ignore these step mappings in the last one and a half rounds.
 
-For \Keccak{}-$224$ the hash state comprises of 3 lanes and 32 bits in the 4th lane. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we don't have value of complete row. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i, \; b_i$ denotes the input and output bit of $\chi$ respectively.
+For \Keccak{}-$224$ the hash state comprises of 3 lanes and 32 bits in the 4th lane. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we do not have value of complete row. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i, \; b_i$ denotes the input and output bit of $\chi$ respectively.
 
-The state $C$ in Figure~\ref{fig:keccak224}, can be expressed in terms of state $B$ :
-\[
-C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
-\]
+As shown in Section~\ref{3rkeccak256}, we linearize $C[x][y][z]$ by guessing $10$ bits. Therefore, we obtain $11 = 1 + 10$ linear equations and match $1$ bit of the hash value corresponding to $C[x][y][z]$. So, if we have $t$ variables in our state, then we can match $t/11$ bits of the hash.
 
-Open all the expressions and separate two terms $B[x][y][z]$ and $B[x-1][y][z]$ and rest 9 terms remain as it is.
-So, \[ B[x][y][z] \oplus B[x-1][y][z] = (a \oplus c + b) \oplus d
-\]
-Where,
-\[
-a = A[x][y][z], b = A[x + 1][y][z], c = A[x + 2][y][z], d = A[x - 1][y][z]
-\]
-Guessing $b$ and other 9 terms would make $C[x][y][z]$ linear. Hence, We linearize $C[x][y][z]$ by guessing these 10 bits. We obtain 11 = 1 + 10 linear equations and match 1 bit of the hash value corresponding to $C[x][y][z]$. So, if we have $t$ variables in our state, then we can match $t/11$ bits of the hash.
-
-For \Keccak-$224$, we started with $8$ variable lanes in the initial state. After applying conditions to keep $\theta$ as constant in the first and the second round we are left with $8 - 2 - 4 = 2$ variable lane. Hence the number of variables $t = 2\cdot 64 = 128$. From these variables we can match atmost $t/11 = 128/11 = 11$ bits. 
+For \Keccak-$224$, we started with $8$ variable lanes in the initial state. After applying conditions to keep $\theta$ as constant in the first and the second round we are left with $8 - 2 - 4 = 2$ variable lanes. Hence the number of variables, $t = 2\cdot 64 = 128$. From these variables we can match atmost $t/11 = 128/11 = 11$ bits. 
 With this, we have a complexity gain over the brute-force of $2^{11}$.
 
 Attack complexity $ = 2^{224 - 11} = 2^{213}$.
