--- a/latex/Thesis/thesis.tex
+++ b/latex/Thesis/thesis.tex
@@ -18,7 +18,7 @@
 %=====================================================================
 % IITB PhD Thesis format default settings are:
 %   12pt, one-sided printing on a4 size paper
-\documentclass[openright,twoside]{iitkthesis}
+\documentclass[openright]{iitkthesis}
 % For two-sided printing, with Chapter starting on odd-numbered pages,
 % use the following line instead:  
 %%\documentclass[openright,twoside]{iitbthesis}
@@ -57,12 +57,12 @@
 % to display URLs in blue roman font according to Springer's eBook style:
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
-%\newcommand{\KECCAK}{\mbox{\textsc{Keccak}}}
-%\newcommand{\Keccak}{\mbox{\textsc{Keccak}}}
-\newcommand{\shashank}[1]{\textcolor{red}{#1}}
+\newcommand{\KECCAK}{\mbox{\textsc{Keccak}}}
+\newcommand{\Keccak}{\mbox{\textsc{Keccak}}}
+%\newcommand{\shashank}[1]{\textcolor{red}{#1}}
 
-\newcommand{\KECCAK}{\mbox{\texttt{Keccak}}}
-\newcommand{\Keccak}{\mbox{\texttt{Keccak}}}
+%\newcommand{\KECCAK}{\mbox{\texttt{Keccak}}}
+%\newcommand{\Keccak}{\mbox{\texttt{Keccak}}}
 
 \newcommand{\SHA}{\textsc{Sha}}
 \newcommand{\Rnd}{\textsc{Round}}
@@ -158,9 +158,9 @@
 	filecolor=magenta,      
 	urlcolor=blue,
 	citecolor=blue,
-	pdftitle={Sharelatex Example},
+	pdftitle={M.Tech. Dissertation},
 	bookmarks=true,
-	pdfpagemode=FullScreen,
+%	pdfpagemode=FullScreen,
 }
 
 %=====================================================================
